sidebar - fixed padding, hover and collapse effects

--- a/src/components/stage-components/side-bar/component-tree/component-nodes/component-nodes.module.scss
+++ b/src/components/stage-components/side-bar/component-tree/component-nodes/component-nodes.module.scss
@@ -16,11 +16,14 @@
   font-weight: bold;
   font-size: inherit;
   padding-right: 8px;
+  &:hover {
+    background: var(--bg-topping-highlight);
+  }
 
   .arrow {
     display: inline-block;
     line-height: inherit;
-    transition: all 300ms;
+    transition: transform 400ms;
     margin-right: 10px;
     color: var(--text-muted);
     [data-collapsed='true'] & {
@@ -45,7 +48,7 @@
 .componentTree {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 400ms ease-in-out;
+  transition: max-height 300ms ease-in-out;
   font-size: 14px;
   &.open {
     max-height: 100vh;
