--- a/src/components/stage-components/side-bar/component-tree/component-tree.module.scss
+++ b/src/components/stage-components/side-bar/component-tree/component-tree.module.scss
@@ -1,3 +1,3 @@
 .componentTree {
-  padding: 0 8px;
+  font-size: var(--p-xs, 14px);
 }
