--- a/src/components/stage-components/side-bar/component-tree/component-view/component-view.module.scss
+++ b/src/components/stage-components/side-bar/component-tree/component-view/component-view.module.scss
@@ -16,6 +16,7 @@
   border-left: 0px solid transparent;
 
   &:hover {
+    background: var(--bg-topping-highlight);
     .envIcon {
       filter: grayscale(0);
     }
