--- a/src/extensions/sidebar/ui/drawer/drawer.module.scss
+++ b/src/extensions/sidebar/ui/drawer/drawer.module.scss
@@ -27,7 +27,7 @@
     display: inline-block;
     font-size: var(--p-xs);
     line-height: inherit;
-    transition: all 300ms;
+    transition: transform 300ms;
     margin-right: 10px;
     color: var(--text-muted);
     &.collapsed {
@@ -42,6 +42,6 @@
   overflow-x: hidden;
   overflow-y: scroll;
   &.open {
-    max-height: calc(100% - 40px);
+    max-height: calc(100% - 30px);
   }
 }
